force-app/main/default/objects/Coverage_Contact__c/Coverage_Contact__c.object-meta.xml
<CustomObject>
    <label>Coverage Contact</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Coverage Contact #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>