force-app/main/default/objects/Coverage_Contact__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Coverage_Contact__r.AccountId</formula>
    <label>Coverage Contact Company</label>
    <type>Text</type>
</CustomField>