force-app/main/default/objects/Coverage_Contact__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Coverage_Contact__r.FirstName+&quot; &quot;+Coverage_Contact__r.LastName, &apos;_parent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>