force-app/main/default/objects/Coverage_Contact__c/fields/Contact_Tier__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tier__c</fullName>
    <label>Contact Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>Non-Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>