force-app/main/default/objects/Coverage_Contact__c/fields/Coverage_Contact_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Contact_Company_Name__c</fullName>
    <formula>Coverage_Contact__r.Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Contact Company Name</label>
    <type>Text</type>
</CustomField>