force-app/main/default/objects/Coverage_Contact__c/fields/Coverage_Contact_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Contact_Name_Formula__c</fullName>
    <description>USED TO INSERT FIRST LAST INTO TXT FIELDS</description>
    <formula>Coverage_Contact__r.FirstName &amp; &quot; &quot; &amp; Coverage_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Contact Name Formula</label>
    <type>Text</type>
</CustomField>