force-app/main/default/objects/Coverage_Contact__c/fields/Coverage_Level__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Level__c</fullName>
    <formula>TEXT ( Coverage_Team_Member__r.Coverage_Level__c )</formula>
    <label>Coverage Level</label>
    <type>Text</type>
</CustomField>