force-app/main/default/objects/Coverage_Contact__c/fields/Coverage_Officer__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer__c</fullName>
    <formula>Coverage_Team_Member__r.Officer__r.FirstName  &amp; &quot; &quot;  &amp;  Coverage_Team_Member__r.Officer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Officer</label>
    <type>Text</type>
</CustomField>