force-app/main/default/objects/Coverage_Contact__c/fields/EU_Initiative__c.field-meta.xml
<CustomField>
    <fullName>EU_Initiative__c</fullName>
    <label>EU Initiative</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEE/CIS</fullName>
            </value>
            <value>
                <fullName>Emerging Asia</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>London General (other W. Europe)</fullName>
            </value>
            <value>
                <fullName>Middle East &amp; Africa</fullName>
            </value>
            <value>
                <fullName>Non-Nordic O&amp;G</fullName>
            </value>
            <value>
                <fullName>Nordics (inc Nordic O&amp;G)</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>