force-app/main/default/objects/Coverage_Contact__c/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <label>Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Advisor (non-Board Member)</fullName>
            </value>
            <value>
                <fullName>Shareholder (non-Sponsor)</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>ADG</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>Bank Workout</fullName>
            </value>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>EM Bank Workout</fullName>
            </value>
            <value>
                <fullName>EM Par Investors - Private</fullName>
            </value>
            <value>
                <fullName>EM Par Investors - Public</fullName>
            </value>
            <value>
                <fullName>EM Secondary Investors</fullName>
            </value>
            <value>
                <fullName>EM Trading Desks</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>General Business Services</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>HRO</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>Info/Mktg Serv</fullName>
            </value>
            <value>
                <fullName>Information Services</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>