force-app/main/default/objects/Coverage_Contact__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <formula>TEXT( Coverage_Team_Member__r.Tier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Company level Tier ranking</inlineHelpText>
    <label>Coverage Team Tier</label>
    <type>Text</type>
</CustomField>